# cool-print

./: pyproject.toml
cool_print/: __init__.py  coloring.py  cool_print.py
cool_print/formatters/: base.py  default.py
lab_1/: main.py
tests/: test_colored.py  test_coolprint.py
